modules/gdscript/tests/scripts/analyzer/errors/for_key_value_not_dictionary.gd
func test():
    for u, v in ["test1", "test2", "test3"]:
        print(u, " ", v)
